refactors, wsl fix